# Advent-of-Code

./: .env  .gitignore  CONTRIBUTING  README.md
assets/2023/01/: instructions.txt
assets/data/2015/02/: instructions.txt
assets/data/2015/11/: instructions.txt
assets/data/2015/13/: instructions.txt
assets/data/2015/15/: instructions.txt
assets/data/2015/17/: instructions.html
assets/data/2015/18/: instructions.html
assets/data/2015/19/: instructions.html
assets/data/2015/20/: instructions.html
assets/data/2015/21/: instructions.html
assets/data/2015/22/: instructions.html
assets/data/2015/23/: instructions.txt
assets/data/2015/24/: instructions.html
assets/data/2015/25/: instructions.html
assets/data/2016/02/: instructions.html
assets/data/2016/03/: instructions.txt
assets/data/2016/04/: instructions.html
assets/data/2016/05/: instructions.txt
assets/data/2016/06/: instructions.txt
assets/data/2016/07/: instructions.html
assets/data/2016/08/: instructions.html
assets/data/2016/09/: instructions.html
assets/data/2016/10/: instructions.txt
assets/data/2016/11/: instructions.html
assets/data/2016/12/: instructions.html
assets/data/2016/13/: instructions.txt
assets/data/2016/14/: instructions.txt
assets/data/2016/15/: instructions.html
assets/data/2016/16/: instructions.txt
assets/data/2016/17/: instructions.html
assets/data/2016/18/: instructions.txt
assets/data/2016/19/: instructions.txt
assets/data/2016/20/: instructions.txt
assets/data/2016/21/: instructions.html
assets/data/2016/22/: instructions.txt
assets/data/2016/23/: instructions.txt
assets/data/2016/24/: instructions.txt
assets/data/2016/25/: instructions.html
assets/data/2017/03/: instructions.html
assets/data/2017/04/: instructions.html
assets/data/2017/05/: instructions.html
assets/data/2017/06/: instructions.html
assets/data/2017/07/: instructions.html
assets/data/2017/08/: instructions.html
assets/data/2017/09/: instructions.html
assets/data/2017/10/: instructions.txt
assets/data/2017/11/: instructions.html
assets/data/2017/12/: instructions.html
assets/data/2017/13/: instructions.html
assets/data/2017/14/: instructions.html
assets/data/2017/15/: instructions.txt
assets/data/2017/16/: instructions.txt
assets/data/2017/17/: instructions.html
assets/data/2017/18/: instructions.txt
assets/data/2017/19/: instructions.html
assets/data/2017/20/: instructions.txt
assets/data/2017/21/: instructions.html
assets/data/2017/22/: instructions.txt
assets/data/2017/23/: instructions.html
assets/data/2017/24/: instructions.html
assets/data/2017/25/: instructions.html
assets/data/2018/01/: instructions.txt
assets/data/2018/03/: instructions.html
assets/data/2018/04/: instructions.html
assets/data/2018/05/: instructions.html
assets/data/2018/06/: instructions.html
assets/data/2018/07/: instructions.txt
assets/data/2018/08/: instructions.txt
assets/data/2018/09/: instructions.txt
assets/data/2018/10/: instructions.html
assets/data/2018/11/: instructions.txt
assets/data/2018/12/: instructions.html
assets/data/2018/13/: instructions.txt
assets/data/2018/14/: instructions.html
assets/data/2018/15/: instructions.txt
assets/data/2018/16/: instructions.txt
assets/data/2018/17/: instructions.txt
assets/data/2018/18/: instructions.html
assets/data/2018/19/: instructions.txt
assets/keys/: session.key
code/rust/: .gitignore  .mise.toml  .rust-analyzer.toml.bac  .rustfmt.toml  Cargo.toml  README.md  flake.nix
code/rust.1/: README.md
code/rust.1/src/tools/admin/: Cargo.toml
code/rust.1/src/tools/admin/src/: env.rs  lib.rs  main.rs
code/rust.1/src/tools/admin/src/error/: mod.rs
code/rust.1/src/tools/admin/src/hook/: generate_pkg_name.rs
code/rust.1/src/tools/admin/src/types/: aoc.rs
code/rust/.cargo/: config.toml
code/rust/.direnv/: flake-profile-3-link
code/rust/2023/01/: Cargo.toml
code/rust/admin/src/env/: local.rs
code/rust/admin/src/error/: this.rs
code/rust/crates/admin/src/cli/: mod.rs
code/rust/crates/admin/src/types/: package.rs
code/rust/crates/admin/src/utils/: mod.rs
code/rust/crates/cli/: Cargo.toml
code/rust/crates/cli/src/: main.rs
code/rust/crates/cluster/: Cargo.toml
code/rust/crates/environment/: Cargo.toml
code/rust/crates/environment/src/: lib.rs  prelude.rs
code/rust/crates/environment/src/config/: core.rs  error.rs  mod.rs
code/rust/crates/environment/src/config/exports/: external.rs  internal.rs
code/rust/crates/environment/src/config/package/: meta.rs  mod.rs
code/rust/crates/environment/src/config/project/: mod.rs
code/rust/crates/environment/src/constants/: mod.rs
code/rust/crates/environment/src/time/: exports.rs  mod.rs
code/rust/crates/lib/src/: main.rs
code/rust/crates/lib/src/jobs/: getters.rs  setters.rs
code/rust/lib/: Cargo.toml
code/rust/lib/src/: lib.rs  main.rs
code/rust/lib/src/cli/: mod.rs
code/rust/lib/src/env/: local.rs
code/rust/lib/src/error/: mod.rs  this.rs
code/rust/lib/src/hook/: generate_pkg_name.rs  mod.rs
code/rust/lib/src/jobs/: getters.rs  mod.rs  setters.rs
code/rust/lib/src/types/: aoc.rs  environment.rs  mod.rs  package.rs
code/rust/lib/src/utils/: mod.rs
code/rust/src/tools/admin/: Cargo.toml
code/rust/src/tools/admin/src/: env.1.rs  env.2.rs  env.rs  main.rs
code/rust/src/tools/admin/src/env/: mod.rs
code/rust/src/tools/admin/src/error/: mod.rs
code/rust/src/tools/admin/src/hook/: mod.rs
code/rust/src/tools/admin/src/jobs/: mod.rs
code/rust/src/tools/admin/src/types/: aoc.rs  environment.rs  mod.rs
code/rust/src/tools/admin/src/util/: mod.rs
code/rust/src/tools/admin/src/utils/: print.rs
code/shellscript/: README.md
documentation/: fetching-assets.md  fetching-data.md  index.md
rust/: Cargo.toml
rust/src/tools/admin/: Cargo.toml
rust/src/tools/admin/src/: env.rs  lib.rs  main.rs
rust/src/tools/admin/src/util/: mod.rs
scripts/: fetch-aoc copy.sh  fetch-aoc.sh  locate-root.sh  rename-instructions-txt2html.sh
(+145 files in other folders)
