[workspace]
resolver = "2"
members = [ "src/tasks/2023/day-01", "src/tools/admin"]

[workspace.lints.rust]
unsafe_code = "forbid"
unused = "allow"
unused_imports = "allow"

[workspace.dependencies]
anyhow = "1.0.70"
clap = "4.4.11"
chrono = "0.4.31"
# criterion = { version = "0.5.1", features = ["html_reports"] }
dotenv = "0.15.0"
# divan = "0.1.4"
# dhat = "0.3.2"
# glam = "0.24.2"
# indicatif = { version = "0.17.7", features = ["rayon"] }
# itertools = "0.12.0"
lazy_static = "1.4.0"
# nom = "7.1.3"
# nom_locate = "4.2.0"
# nom-supreme = "0.8.0"
# once_cell = "1.19.0"
# rstest = "0.18.2"
# rstest_reuse = "0.6.0"
# tracing = "0.1.40"
# tracing-subscriber = { version = "0.3.17", features = ["fmt", "env-filter"] }
# tracing-tracy = "0.10.4"
# tracy-client = "0.16.4"
# tracy-client-sys = "0.22.0"
# miette = { version = "5.10", features = ["fancy"] }
# petgraph = "0.6.4"
# rayon = "1.8.0"
reqwest = { version = "0.11.22", features = ["blocking"] }
thiserror = "1.0.50"
# test-log = { version = "0.2.13", default-features = false, features = [
#     "trace",
# ] }
