[workspace]
resolver = "2"
members = [
  "admin",
  "2023/01",
  "2023/02",
  "2023/03",
  "2023/04",
  "2023/05",
  "2023/06",
  "2023/07",
  "2023/08",
  "2023/09",
  "2023/10",
  "2023/11",
  "2023/12",
  "2024/01",
  "2024/02",
  "2024/03",
  "2024/04",
  "2024/05",
  "2024/06",
  "2024/07",
  "2024/08",
  "2024/09",
  "2024/10",
  "2024/11",
  "2024/12",
  "2025/01",
  "2025/02",
  "2025/03",
  "2025/04",
  "2025/05",
  "2025/06",
  "2025/07",
  "2025/08",
  "2025/09",
  "2025/10",
  "2025/11",
  "2025/12",
]

[workspace.lints.rust]
unsafe_code = "forbid"
unused = "allow"
unused_imports = "allow"

[workspace.dependencies]
miette = "7.6.0"
cargo_metadata = "0.23.1"
clap = "4.5.56"
chrono = "0.4.43"
dotenv_rs = "0.16.1"
# divan = "0.1.4"
# dhat = "0.3.2"
# glam = "0.24.2"
# indicatif = { version = "0.17.7", features = ["rayon"] }
# itertools = "0.12.0"
# lazy_static = "1.4.0"
# nom = "7.1.3"
# nom_locate = "4.2.0"
# nom-supreme = "0.8.0"
# once_cell = "1.19.0"
# rstest = "0.18.2"
# rstest_reuse = "0.6.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["fmt", "env-filter"] }
# tracing-tracy = "0.10.4"
# tracy-client = "0.16.4"
# tracy-client-sys = "0.22.0"
# miette = { version = "5.10", features = ["fancy"] }
# petgraph = "0.6.4"
# rayon = "1.8.0"
reqwest = { version = "0.13.1", features = ["blocking"] }
thiserror = "2.0.18"
# test-log = { version = "0.2.13", default-features = false, features = [
#     "trace",
# ] }
walkdir = "2.5.0"
