[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.release-with-debug]
inherits = "release"
strip = false
debug = true

[workspace]
# default-members = ["crates/*"]
members = [
  #~@ Utilities
  # "crates/*",

  "crates/cli",
  "crates/environment",
  # "crates/core",
  # "crates/grid",
  # "crates/parse",
  # "crates/search",
  # "crates/math",
  # "crates/direction",

  #~@ Solutions
  #? Auto-discover all years/days
  # "tasks/*/[0-9][0-9]",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Craig 'Craole' Cole <craig.craole.cole@gmail.com>"]
description = "Advent of Code: Coding Adventures Across Languages"
license = "MIT"
repository = "https://github.com/craole-cc/portfolio.git"
homepage = "https://craole.cc"
readme = "README.md"
keywords = ["advent-of-code", "coding-challenges"]
categories = [
  "algorithms",
  "games",
  "mathematics",
  "parsing",
  "text processing",
]

[workspace.lints.rust]
unsafe_code = { level = "deny", priority = 0 }
unused = { level = "allow", priority = -1 }

[workspace.lints.clippy]
cargo = { level = "warn", priority = 0 }
complexity = { level = "warn", priority = 0 }
correctness = { level = "deny", priority = 0 }
nursery = { level = "warn", priority = 0 }
pedantic = { level = "warn", priority = 0 }
perf = { level = "warn", priority = 0 }
style = { level = "warn", priority = 0 }
suspicious = { level = "warn", priority = 0 }
# multiple_crate_versions = { level = "allow", priority = 1 }
cognitive_complexity = { level = "allow", priority = 1 }

[workspace.dependencies]
# -- Internal
cli = { path = "crates/cli" }
env = { path = "crates/environment" }
graph = { path = "crates/cluster" }
grid = { path = "crates/layout" }
input = { path = "crates/input" }
math = { path = "crates/math" }
nav = { path = "crates/navigation" }

# -- External
clap = "4.5.56"
miette = "7.6.0"
thiserror = "2.0.18"
tokio = { version = "1.48.0", features = ["full"] }
tokio-test = "0.4"
tracing = "0.1.41"
trycmd = "0.15.10"

# # === Common Dependencies ===
# itertools = "0.14.0"
# rustc-hash = "2.0.0"
# regex = "1.11.1"
# nom = "8.0.0"

# # === Performance ===
# rayon = "1.10.0"
# pathfinding = "4.11.0"

# # === Utilities ===
# chrono = "0.4.43"
# walkdir = "2.5.0"

# # === Testing ===
# rstest = "0.26.1"
# criterion = "0.8.1"
