[package]
name = "admin"
version = "0.1.0"
edition = "2021"
default-run = "admin"

[dependencies]
cargo_metadata.workspace = true
clap.workspace = true
chrono.workspace = true
dotenv_rs.workspace = true
reqwest.workspace = true
# tracing.workspace = true
# tracing-subscriber.workspace = true
once_cell.workspace = true
lazy_static.workspace = true
anyhow.workspace = true
thiserror.workspace = true
walkdir.workspace = true

[lib]
doctest = false

[lints]
workspace = true
